[package]
name = "valet"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"
description = "Stores your objects and gives you a tag to retrieve them later."
readme = "README.md"
license = "MIT"
keywords = ["object", "store", "self-referential"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
